# wvec

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
docs/: README.de.md  README.fr.md  README.jp.md  README.kr.md  README.zh.md
fortran/: Makefile  wvec_blas.f90  wvec_checkpoint.f90  wvec_model.f90  wvec_thermal.f90  wvec_train.f90  wvec_types.f90
src/: cli.rs  ffi.rs  lib.rs  main.rs
src/bpe/: decode.rs  encode.rs  io.rs  mod.rs  train.rs  types.rs  vocab.rs
src/cmd/: analogy.rs  bpe_encode.rs  bpe_train.rs  embed.rs  info.rs  mod.rs  similar.rs  train.rs
src/input/: html.rs  mod.rs  text.rs  xml.rs
src/text/: mod.rs  normalize.rs  pretokenize.rs
